--- a/MyShuttle/INFO_TRAINING.html
+++ b/MyShuttle/INFO_TRAINING.html
@@ -135,7 +135,7 @@
 	<body>
 		<br></br>
 
-		<h2>Site Info</h2>
+		<b><h2>Site Info</h2></b>
 		<br></br>
 
 		<p>MyShuttle was founded in 2020 as a service for college students.</p>
