--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -14,13 +14,8 @@
 	<meta charset="UTF-8">
 		
 	<!--Adding a Tab/Main Plane Icon (.ico) for Apple devices & other; must have these files in root directory-->
-	<link rel="" type="" href=""/>
-	<link rel="" sizes="" href="">
-	<link rel="" type="" sizes="" href="">
-	<link rel="" type="" sizes="" href="">
-	<link rel="" type="" sizes="" href="">
-	<link rel="" type="" sizes="" href="">
-	<link rel="" type="" sizes="" href="">
+	<link rel="icon" type="image/x-icon" href="myShuttlelogo.ico"/>
+	
 	
 	<!--Menu Nav Bar & SITE STYLE CSS-->
 	<link href="HomeNavBar.css" rel="stylesheet" type="text/css"/>
@@ -46,7 +41,7 @@
 
 
 <header>
-	<a href="index.html"><strong><h1><IMG src=".png" alt="logo" class="responsive">&nbsp;MyShuttle</h1></strong></a>
+	<a href="index.html"><strong><h1><IMG src="myShuttlelogo.png" alt="logo" class="responsive">&nbsp;MyShuttle</h1></strong></a>
 		<!--<a href="index.html"><strong><h1> &nbsp;MyShuttle</h1></strong></a>-->
 	
 	<!--WHEN SCREEN RESIZE, topnav adapts for cleaner look-->
