--- a/MyShuttle/index.html
+++ b/MyShuttle/index.html
@@ -41,7 +41,7 @@
 
 
 <header>
-	<a href="index.html"><strong><h1><IMG src="myShuttlelogo.png" alt="logo" class="responsive">&nbsp;MyShuttle</h1></strong></a>
+	<a href="index.html"><strong><h1><IMG src="myShuttlelogo.png" alt="logo" class="responsive"></h1></strong></a>
 		<!--<a href="index.html"><strong><h1> &nbsp;MyShuttle</h1></strong></a>-->
 	
 	<!--WHEN SCREEN RESIZE, topnav adapts for cleaner look-->
