--- a/MyShuttle/requestShuttle.html
+++ b/MyShuttle/requestShuttle.html
@@ -45,7 +45,7 @@
 
 
 	<header>
-				<a href="index.html"><strong><h1> &nbsp;MyShuttle</h1></strong></a>
+				<a href="index.html"><strong><h1><IMG src="myShuttlelogo.png" alt="logo" class="responsive"></h1></strong></a>
 		
 				<!--WHEN SCREEN RESIZE, topnav adapts for cleaner look-->
 				<nav class="topnav" id="myTopNav">
